# risc0_test

./: .gitignore  command.md  differentRun.py
data/: difference.csv
data/program/: difference.csv  risc0_5f2de47b52d3d1af_20241230134301.rs  sp1_5f2de47b52d3d1af_20241230134301.rs
differentRun/: Cargo.toml
differentRun/host/: Cargo.toml
differentRun/host/src/: main.rs  main_backcp.rs  main_backup.rs
differentRun/methods/guest/: Cargo.toml
differentRun/methods/guest/src/: main.rs
differentRun/program/: Cargo.toml
differentRun/program/src/: main.rs
host/: Cargo.toml
host/src/: main.rs
